; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_Attach.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_Attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@eximap = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @EXI_Attach(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @eximap, align 8
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i64 %9
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %7, align 8
  %11 = load i64, i64* %3, align 8
  %12 = call i32 @EXI_Probe(i64 %11)
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @_CPU_ISR_Disable(i32 %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %2
  %20 = load i64, i64* %3, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i64 @__exi_attach(i64 %20, i32 %21)
  store i64 %22, i64* %5, align 8
  br label %24

23:                                               ; preds = %2
  store i64 0, i64* %5, align 8
  br label %24

24:                                               ; preds = %23, %19
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @_CPU_ISR_Restore(i32 %25)
  %27 = load i64, i64* %5, align 8
  ret i64 %27
}

declare dso_local i32 @EXI_Probe(i64) #1

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i64 @__exi_attach(i64, i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
